hphp/hack/test/typecheck/coeffects/local/indexing_collections.php.exp
File "indexing_collections.php", line 7, characters 3-14:
Assigning to an element of a Hack Collection object via `[]` requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "indexing_collections.php", line 6, characters 2-3:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "indexing_collections.php", line 8, characters 3-14:
Assigning to an element of a Hack Collection object via `[]` requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "indexing_collections.php", line 6, characters 2-3:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "indexing_collections.php", line 15, characters 3-14:
Assigning to an element of a Hack Collection object via `[]` requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "indexing_collections.php", line 14, characters 2-3:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
File "indexing_collections.php", line 16, characters 3-14:
Assigning to an element of a Hack Collection object via `[]` requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "indexing_collections.php", line 14, characters 2-3:
  The local (enclosing) context provides the capability set {}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
